--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="" defer></script>
+    <script src="./JS/calculator.js" defer></script>
 </head>
 <body>
     
